--- a/public/app/components/keyboard/view.html
+++ b/public/app/components/keyboard/view.html
@@ -1,3 +1,3 @@
 <ul>
-    <li data-note="{{ note }}" ng-class="getClass($index)" ng-repeat="note in notes">{{note}}</li>
+    <li data-note="{{ note }}" ng-class="getClass($index)" ng-repeat="note in notesGenerated"><span>{{note}}</span></li>
 </ul>
